--- a/styles/todo.css
+++ b/styles/todo.css
@@ -97,45 +97,18 @@
 }
 
 .task-remove-button {
-    appearance: none; 
-    -webkit-appearance: none; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-left: 5px;
     margin-right: 0px;
     width: 18px; 
     height: 18px;
-    border: 2px solid #eb0505; 
-    border-radius: 50%; 
-    background-color: rgb(219, 80, 80); 
     cursor: pointer;
     transition: all 0.3s ease;
     position: relative;
 }
 
-.task-remove-button:checked:hover {
-    background-color: #5c0303;
+.task-remove-button:hover {
     width: 22px;
     height: 22px;
-    font-size: 17px;
-}
-
-.task-remove-button:checked {
-    background-color: rgb(219, 80, 80);
-    border-color: #eb0505;
-    position: relative;
-}
-
-.task-remove-button:checked::after {
-    content: "\01F5D1";
-    color: white;
-    font-size: 15px;
-    font-weight: bold;
-    position: absolute;
-    top: 48%;
-    left: 54%;
-    transform: translate(-50%, -50%);
 }
 
 .task-body {
