--- a/styles/todo.css
+++ b/styles/todo.css
@@ -21,6 +21,7 @@
     align-items: center;
     background-color: rgba(0,0,0, 0);
     border: none;
+    cursor: pointer;
 }
 
 #todo-fullscreen-icon {
