--- a/styles/info.css
+++ b/styles/info.css
@@ -101,8 +101,10 @@
     flex-direction: column;
 }
 
-.points,
+.points {
+    height: 100%;
+}
+
 .booking {
-    height: 50%;
-    flex: 1;
+    text-align: start;
 }
