Added dragging for new task

--- a/styles/todo.css
+++ b/styles/todo.css
@@ -139,6 +139,12 @@
     padding: 10px;
     font-size: 0.9rem;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    transition: all 0.2s;
+    cursor: pointer;
+}
+
+.task-body:hover {
+    height: 32px;
 }
 
 #todays-tasks-header {
