--- a/styles/info.css
+++ b/styles/info.css
@@ -21,10 +21,37 @@
 }
 
 .new-task {
+    padding-top: 10px;
+    width: 400px;
+    z-index: 99;
     position: absolute;
     top: 400px;
     height: 200px;
     display: none;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.25);
+    background: #f9f9f9;
+}
+
+#new-task-header {
+    cursor: move;
+    display: flex;
+    height: 25px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#new-task-exit-button {
+    text-align: center; 
+    font-size: 15px;
+    cursor: pointer;
+    font-weight: bold;
+    background-color: rgba(0,0,0,0);
+    border: none;
+    transition: all 0.15s;
+}
+
+#new-task-exit-button:hover {
+    font-size: 17px;
 }
 
 .new-task-input {
