--- a/styles/todo.css
+++ b/styles/todo.css
@@ -69,10 +69,25 @@
 }
 
 .task {
-    display: flex;
+    display: grid;
+    grid-template-columns: 35px 1fr 30px;
     align-items: center;
     margin-bottom: 10px;
-    height: 45px;
+}
+
+.task-name, .date {
+    pointer-events: none;
+}
+
+.task-description {
+    padding: 10px;
+    max-width: 100%;
+    height: fit-content;
+    background-color: white;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: none;
 }
 
 .task-button {
