--- a/styles/info.css
+++ b/styles/info.css
@@ -26,7 +26,7 @@
     min-width: 200px;
     z-index: 99;
     position: absolute;
-    top: 400px;
+    top: 50vh;
     max-height: 200px;
     min-height: 50px;
     display: none;
