--- a/styles/info.css
+++ b/styles/info.css
@@ -1,17 +1,21 @@
 .info-container {
     width: 700px;
     min-width: 300px;
-    height: fit-content;
+    height: 200vh;
 }
 
 .calendar, .new-task, .networking, .points, .booking {
-    background: linear-gradient(135deg, #fffaeb, #fdf9eb);
+    background: linear-gradient(135deg, hsl(0, 0%, 100%), #fffffe);
     border-radius: 10px;
     padding: 20px;
     text-align: center;
     font-size: 1rem;
     font-weight: bold;
     margin-bottom: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    overflow: hidden;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
 }
 
 .calendar {
@@ -129,11 +133,19 @@
 }
 
 .points {
-    height: 100%;
+    height: 25vh;
     border-radius:5px;
     background-color:lightgray;
 }
 
 .booking {
-    text-align: start;
+    text-align: center;
+    height:15vh;
+}
+
+@media(max-width: 900px){
+    .info-container {
+        width: 650px;
+        height: 195vh;
+    }
 }
