--- a/styles/todo.css
+++ b/styles/todo.css
@@ -54,9 +54,10 @@
 @media(max-width: 900px){
     .todo-container {
         width: 650px;
+        height: 95vh;
     }
     .todo-body {
-        max-height: 30vh;
+    max-height: 85vh;
     }
 }
 
@@ -149,7 +150,7 @@
     align-items: center;
     justify-content: space-between;
     height: 28px;
-    background: linear-gradient(135deg, #E3F2FD, #BBDEFB);
+    background: linear-gradient(135deg,#ECF6FE, #ecf6fe);
     border-radius: 10px;
     padding: 10px;
     font-size: 0.9rem;
