--- a/styles/todo.css
+++ b/styles/todo.css
@@ -120,7 +120,7 @@
 
 .task-button:checked::after {
     content: '\2713'; 
-    color: white;
+    color: rgb(0, 0, 0);
     font-size: 16px;
     font-weight: bold;
     position: absolute;
