--- a/styles/info.css
+++ b/styles/info.css
@@ -4,7 +4,7 @@
     height: 200vh;
 }
 
-.calendar, .new-task, .networking, .points, .booking {
+.calendar, .new-task, .notes, .points, .booking {
     background: linear-gradient(135deg, hsl(0, 0%, 100%), #fffffe);
     border-radius: 10px;
     padding: 20px;
@@ -123,7 +123,7 @@
     flex: 0.5;
     height: 300px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 2.2fr 1fr;
     gap: 15px;
 }
 
@@ -133,14 +133,57 @@
 }
 
 .points {
-    height: 25vh;
+    height: 10;
     border-radius:5px;
     background-color:lightgray;
 }
 
+.notes {
+    height: 50vh;
+    background: linear-gradient(135deg, hsl(0, 0%, 95%), #fffffe);
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 10px;
+}
+
+#notes-body {
+    background: linear-gradient(135deg, hsl(0, 0%, 100%), #fffffe);
+    box-shadow: inset 0px 2px 6px  rgba(0, 0, 0, 0.3);
+    flex-direction: row;
+    padding: 10px;
+    height: 95%;
+}
+
+.note {
+    flex-direction: column;
+    justify-content: left;
+    flex: 1;
+    margin-top: 10px;
+    height: 50px;
+    border-radius: 2px;
+    box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
+}
+
+.note .div {
+    display: inline-block;
+}
+
+#notes-header {
+    display: grid;
+    grid-template-columns: 0.33fr 0.33fr 0.33fr;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#add-new-note {
+    text-align: right;
+    margin-right: 10px;
+    font-size: 20px;
+}
+
 .booking {
     text-align: center;
-    height:15vh;
+    flex: 1;
 }
 
 @media(max-width: 900px){
