--- a/styles/info.css
+++ b/styles/info.css
@@ -139,6 +139,7 @@
 }
 
 .notes {
+    font-family: 'Poppins', sans-serif;
     height: 50vh;
     background: linear-gradient(135deg, hsl(0, 0%, 95%), #fffffe);
     padding-left: 0;
