--- a/styles/info.css
+++ b/styles/info.css
@@ -156,7 +156,7 @@
     overflow-y: auto;
 }
 
-.cancel-note, .finish-note {
+.cancel-note, .finish-note, .delete-note {
     cursor: pointer;
 }
 
@@ -169,7 +169,12 @@
     height: 90%;
 }
 
+.note div {
+    pointer-events: none;
+}
+
 .note {
+    cursor: pointer;
     flex: 1;
     margin-top: 10px;
     height: 50px;
@@ -180,6 +185,10 @@
 .note-date, .note-firstline {
     font-weight: 500;
     margin-left: 10px;
+}
+
+.note-firstline {
+    
 }
 
 .note-title {
