--- a/styles/info.css
+++ b/styles/info.css
@@ -178,8 +178,14 @@
     flex: 1;
     margin-top: 10px;
     height: 50px;
-    border-radius: 2px;
+    border-radius: 4px;
     box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.3);
+    transition: all 0.3s;
+    align-items: center;
+}
+
+.note:hover {
+    height: 57px;
 }
 
 .note-date, .note-firstline {
