--- a/styles/info.css
+++ b/styles/info.css
@@ -296,6 +296,7 @@
         display: block;
     }
     .phone-booking-grid{
-        padding:6px;
+        margin-left:4px;
+        margin-right:4px;
     }
 }
