--- a/styles/general.css
+++ b/styles/general.css
@@ -7,7 +7,7 @@ body {
 }
 
 
-.install{
+.install-btn{
   position: absolute;
   top: 20px;
   right: 20px;
@@ -15,7 +15,7 @@ body {
 
 
 @media (max-width: 768px) {
-  .install{
+  .install-btn{
     position: fixed;
     bottom: 20px;
     left: 50%;
