--- a/styles/general.css
+++ b/styles/general.css
@@ -7,19 +7,45 @@ body {
 }
 
 
-.install-btn{
-  position: absolute;
-  top: 20px;
-  right: 20px;
+.install {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #151633;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 300px;
+  display: none; 
 }
 
+.install-button {
+  background-color: #ffffff;
+  color: #151633;
+  border: none;
+  padding: 8px 16px;
+  border-radius: 5px;
+  font-weight: bold;
+  cursor: pointer;
+  margin-bottom: 8px;
+  font-family: 'Poppins', sans-serif;
+}
 
-@media (max-width: 768px) {
-  .install-btn{
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
+.install-notes {
+  font-size: 14px;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .install {
+    width: 80%;
+    bottom: 15px;
   }
 }
 
