--- a/styles/general.css
+++ b/styles/general.css
@@ -4,9 +4,6 @@ body {
     background-color: #f7f8fa;
     color: #333;
     margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .install {
@@ -75,6 +72,15 @@ body {
   background-color: #005bb5;
 }
 
+.shortcut-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.8rem;
+  margin-top: 5px;
+  position: relative;
+}
+
 .app-icon-container {
   display: flex;
   flex-direction: column;
@@ -97,7 +103,6 @@ body {
   color: #666;
   margin-top: 4px;
 }
-
 .done-button {
   margin-top: 15px;
   padding: 8px 15px;
@@ -113,6 +118,7 @@ body {
 .done-button:hover {
   background-color: #f5f5f5;
 }
+
 
 header {
     z-index: 100;
@@ -137,10 +143,9 @@ main {
     align-items: flex-start;
     padding: 20px;
     gap: 20px;
-    width: 100%; /* Ensure it spans the full width */
 }
 
-@media(max-width: 900px) {
+@media(max-width: 900px){
     main {
         flex-wrap: wrap;
     }
@@ -151,5 +156,5 @@ main {
     border-radius: 15px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     padding: 15px;
-    flex: 1 1 100%; /* Allow flexibility in smaller viewports */
 }
+
